--- a/Organizer.html
+++ b/Organizer.html
@@ -33,7 +33,6 @@
 
 
 
-
   <script type="application/ld+json">
     {
       "@context": "http://schema.org",
@@ -1088,7 +1087,7 @@
     </div>
   </section>
   <section class="u-clearfix u-section-8" id="sec-67bb">
-    <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
+    <div class="u-clearfix u-sheet u-sheet-1">
       <div class="u-border-2 u-border-grey-25 u-line u-line-horizontal u-line-1"></div>
       <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/ZS.png" alt=""
         data-image-width="402" data-image-height="162">
@@ -1131,9 +1130,10 @@
     </div>
   </section>
   <section class="u-clearfix u-section-12" id="sec-5f09">
-    <div class="u-clearfix u-sheet u-sheet-1">
+    <div class="u-clearfix u-sheet u-valign-bottom u-sheet-1">
       <p class="u-text u-text-grey-60 u-text-1"><b>Shanghai Society for Anatomy Scineces</b>
       </p>
+      <div class="u-border-2 u-border-grey-25 u-line u-line-horizontal u-line-1"></div>
     </div>
   </section>
   <section class="u-clearfix u-section-13" id="sec-5c26">
@@ -1164,218 +1164,14 @@
       </p>
     </div>
   </section>
-  <!-- <section class="u-align-center u-clearfix u-section-16" id="sec-afc1">
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <h3 class="u-text u-text-default u-text-grey-80 u-text-1">FAQ</h3>
-      <div class="u-accordion u-expanded-width u-faq u-spacing-20 u-accordion-1">
-        <div class="u-accordion-item">
-          <a class="active u-accordion-link u-border-1 u-border-active-grey-75 u-border-grey-15 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style u-text-grey-80 u-accordion-link-1"
-            id="link-accordion-6327" aria-controls="accordion-6327" aria-selected="true">
-            <span class="u-accordion-link-text"> What is the estimated time for approval of participation request after
-              sending the signed challenge rule?</span><span
-              class="u-accordion-link-icon u-icon u-text-black u-icon-1"><svg class="u-svg-link"
-                preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-8021"></use>
-              </svg><svg class="u-svg-content" viewBox="0 0 16 16" x="0px" y="0px" id="svg-8021" style="">
-                <path d="M8,10.7L1.6,5.3c-0.4-0.4-1-0.4-1.3,0c-0.4,0.4-0.4,0.9,0,1.3l7.2,6.1c0.1,0.1,0.4,0.2,0.6,0.2s0.4-0.1,0.6-0.2l7.1-6
-	c0.4-0.4,0.4-0.9,0-1.3c-0.4-0.4-1-0.4-1.3,0L8,10.7z"></path>
-              </svg></span>
-          </a>
-          <div class="u-accordion-active u-accordion-pane u-container-style u-accordion-pane-1" id="accordion-6327"
-            aria-labelledby="link-accordion-6327">
-            <div class="u-container-layout u-container-layout-1">
-              <div class="fr-view u-clearfix u-rich-text u-text">
-                <p>
-                  <span class="u-text-grey-60">If the signed challenge rule document is filled out correctly, the
-                    participation request will be approved within 2-4 working days.</span>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="u-accordion-item">
-          <a class="u-accordion-link u-border-1 u-border-active-grey-75 u-border-grey-15 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style u-text-grey-80 u-accordion-link-2"
-            id="link-accordion-4aab" aria-controls="accordion-4aab" aria-selected="false">
-            <span class="u-accordion-link-text"> Is it possible to download the challenge dataset without participating
-              in the challenge?</span><span class="u-accordion-link-icon u-icon u-text-black u-icon-2"><svg
-                class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-3470"></use>
-              </svg><svg class="u-svg-content" viewBox="0 0 16 16" x="0px" y="0px" id="svg-3470" style="">
-                <path d="M8,10.7L1.6,5.3c-0.4-0.4-1-0.4-1.3,0c-0.4,0.4-0.4,0.9,0,1.3l7.2,6.1c0.1,0.1,0.4,0.2,0.6,0.2s0.4-0.1,0.6-0.2l7.1-6
-	c0.4-0.4,0.4-0.9,0-1.3c-0.4-0.4-1-0.4-1.3,0L8,10.7z"></path>
-              </svg></span>
-          </a>
-          <div class="u-accordion-pane u-container-style u-accordion-pane-2" id="accordion-4aab"
-            aria-labelledby="link-accordion-4aab">
-            <div class="u-container-layout u-container-layout-2">
-              <div class="fr-view u-clearfix u-rich-text u-text">
-                <p>No, the dataset is only available to participants during the challenge to ensure enough submissions.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="u-accordion-item">
-          <a class="u-accordion-link u-border-1 u-border-active-grey-75 u-border-grey-15 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style u-text-grey-80 u-accordion-link-3"
-            id="link-accordion-eb1f" aria-controls="accordion-eb1f" aria-selected="false">
-            <span class="u-accordion-link-text">What is the maximum number of team members allowed?</span><span
-              class="u-accordion-link-icon u-icon u-text-black u-icon-3"><svg class="u-svg-link"
-                preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-e07d"></use>
-              </svg><svg class="u-svg-content" viewBox="0 0 16 16" x="0px" y="0px" id="svg-e07d" style="">
-                <path d="M8,10.7L1.6,5.3c-0.4-0.4-1-0.4-1.3,0c-0.4,0.4-0.4,0.9,0,1.3l7.2,6.1c0.1,0.1,0.4,0.2,0.6,0.2s0.4-0.1,0.6-0.2l7.1-6
-	c0.4-0.4,0.4-0.9,0-1.3c-0.4-0.4-1-0.4-1.3,0L8,10.7z"></path>
-              </svg></span>
-          </a>
-          <div class="u-accordion-pane u-container-style u-accordion-pane-3" id="accordion-eb1f"
-            aria-labelledby="link-accordion-eb1f">
-            <div class="u-container-layout u-container-layout-3">
-              <div class="fr-view u-clearfix u-rich-text u-text">
-                <p>Each team can consist of up to 6 people. The authors in the submitted paper should be the same as the
-                  team member list.<br
-                    style="box-sizing: border-box; color: rgb(17, 17, 17); font-family: Arial, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;"
-                    id="isPasted">
-                  <br>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="u-accordion-item">
-          <a class="u-accordion-link u-border-1 u-border-active-grey-75 u-border-grey-15 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style u-text-grey-80 u-accordion-link-4"
-            id="link-0ed5" aria-controls="0ed5" aria-selected="false">
-            <span class="u-accordion-link-text"> Can other datasets or pre-trained models be used to develop the
-              reconstrction algorithms?</span><span class="u-accordion-link-icon u-icon u-text-black u-icon-4"><svg
-                class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-60d2"></use>
-              </svg><svg class="u-svg-content" viewBox="0 0 16 16" x="0px" y="0px" id="svg-60d2">
-                <path d="M8,10.7L1.6,5.3c-0.4-0.4-1-0.4-1.3,0c-0.4,0.4-0.4,0.9,0,1.3l7.2,6.1c0.1,0.1,0.4,0.2,0.6,0.2s0.4-0.1,0.6-0.2l7.1-6
-	c0.4-0.4,0.4-0.9,0-1.3c-0.4-0.4-1-0.4-1.3,0L8,10.7z"></path>
-              </svg></span>
-          </a>
-          <div class="u-accordion-pane u-container-style u-accordion-pane-4" id="0ed5" aria-labelledby="link-0ed5">
-            <div class="u-container-layout u-container-layout-4">
-              <div class="fr-view u-clearfix u-rich-text u-text">
-                <p>No, only the challenge dataset is allowed for developing the segmentation algorithms.</p>
-                <p>Data augmentation based on the training dataset is allowed.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="u-accordion-item">
-          <a class="u-accordion-link u-border-1 u-border-active-grey-75 u-border-grey-15 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style u-text-grey-80 u-accordion-link-5"
-            id="link-0fe6" aria-controls="0fe6" aria-selected="false">
-            <span class="u-accordion-link-text"> Is manual annotation of unlabeled images allowed to increase the
-              training set?&nbsp;</span><span class="u-accordion-link-icon u-icon u-text-black u-icon-5"><svg
-                class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-a297"></use>
-              </svg><svg class="u-svg-content" viewBox="0 0 16 16" x="0px" y="0px" id="svg-a297">
-                <path d="M8,10.7L1.6,5.3c-0.4-0.4-1-0.4-1.3,0c-0.4,0.4-0.4,0.9,0,1.3l7.2,6.1c0.1,0.1,0.4,0.2,0.6,0.2s0.4-0.1,0.6-0.2l7.1-6
-	c0.4-0.4,0.4-0.9,0-1.3c-0.4-0.4-1-0.4-1.3,0L8,10.7z"></path>
-              </svg></span>
-          </a>
-          <div class="u-accordion-pane u-container-style u-accordion-pane-5" id="0fe6" aria-labelledby="link-0fe6">
-            <div class="u-container-layout u-container-layout-5">
-              <div class="fr-view u-clearfix u-rich-text u-text">
-                <p>No, any manual interventions are not allowed, including manual annotation of unlabeled images.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="u-accordion-item">
-          <a class="u-accordion-link u-border-1 u-border-active-grey-75 u-border-grey-15 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style u-text-grey-80 u-accordion-link-6"
-            id="link-46b1" aria-controls="46b1" aria-selected="false">
-            <span class="u-accordion-link-text"> Can high-quality pseudo labels for the unlabeled images be manually
-              selected?&nbsp;</span><span class="u-accordion-link-icon u-icon u-text-black u-icon-6"><svg
-                class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-251b"></use>
-              </svg><svg class="u-svg-content" viewBox="0 0 16 16" x="0px" y="0px" id="svg-251b">
-                <path d="M8,10.7L1.6,5.3c-0.4-0.4-1-0.4-1.3,0c-0.4,0.4-0.4,0.9,0,1.3l7.2,6.1c0.1,0.1,0.4,0.2,0.6,0.2s0.4-0.1,0.6-0.2l7.1-6
-	c0.4-0.4,0.4-0.9,0-1.3c-0.4-0.4-1-0.4-1.3,0L8,10.7z"></path>
-              </svg></span>
-          </a>
-          <div class="u-accordion-pane u-container-style u-accordion-pane-6" id="46b1" aria-labelledby="link-46b1">
-            <div class="u-container-layout u-container-layout-6">
-              <div class="fr-view u-clearfix u-rich-text u-text">
-                <p>No, any manual interventions are not allowed, including manual selection of high-quality pseudo
-                  labels for unlabeled images.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="u-accordion-item">
-          <a class="u-accordion-link u-border-1 u-border-active-grey-75 u-border-grey-15 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style u-text-grey-80 u-accordion-link-7"
-            id="link-ccfe" aria-controls="ccfe" aria-selected="false">
-            <span class="u-accordion-link-text"> Does the validation submission affect the final
-              ranking?&nbsp;</span><span class="u-accordion-link-icon u-icon u-text-black u-icon-7"><svg
-                class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-84ad"></use>
-              </svg><svg class="u-svg-content" viewBox="0 0 16 16" x="0px" y="0px" id="svg-84ad">
-                <path d="M8,10.7L1.6,5.3c-0.4-0.4-1-0.4-1.3,0c-0.4,0.4-0.4,0.9,0,1.3l7.2,6.1c0.1,0.1,0.4,0.2,0.6,0.2s0.4-0.1,0.6-0.2l7.1-6
-	c0.4-0.4,0.4-0.9,0-1.3c-0.4-0.4-1-0.4-1.3,0L8,10.7z"></path>
-              </svg></span>
-          </a>
-          <div class="u-accordion-pane u-container-style u-accordion-pane-7" id="ccfe" aria-labelledby="link-ccfe">
-            <div class="u-container-layout u-container-layout-7">
-              <div class="fr-view u-clearfix u-rich-text u-text">
-                <p>No, the validation submission does not affect the final ranking.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="u-accordion-item">
-          <a class="u-accordion-link u-border-1 u-border-active-grey-75 u-border-grey-15 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style u-text-grey-80 u-accordion-link-8"
-            id="link-980a" aria-controls="980a" aria-selected="false">
-            <span class="u-accordion-link-text"> Can modifications be made to the methods and the paper during the
-              testing phase?</span><span class="u-accordion-link-icon u-icon u-text-black u-icon-8"><svg
-                class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-49d7"></use>
-              </svg><svg class="u-svg-content" viewBox="0 0 16 16" x="0px" y="0px" id="svg-49d7">
-                <path d="M8,10.7L1.6,5.3c-0.4-0.4-1-0.4-1.3,0c-0.4,0.4-0.4,0.9,0,1.3l7.2,6.1c0.1,0.1,0.4,0.2,0.6,0.2s0.4-0.1,0.6-0.2l7.1-6
-	c0.4-0.4,0.4-0.9,0-1.3c-0.4-0.4-1-0.4-1.3,0L8,10.7z"></path>
-              </svg></span>
-          </a>
-          <div class="u-accordion-pane u-container-style u-accordion-pane-8" id="980a" aria-labelledby="link-980a">
-            <div class="u-container-layout u-container-layout-8">
-              <div class="fr-view u-clearfix u-rich-text u-text">
-                <p>Yes, modifications can be made before the testing submission, but not after.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <h3 class="u-align-left u-text u-text-default u-text-grey-80 u-text-10">Rules</h3>
-      <p class="u-align-left u-text u-text-grey-60 u-text-11"> 1. All individuals who wish to participate in this
-        challenge are required to register using their<span style="font-weight: 700;"> real name, affiliation details
-          (including department, university /institute/company name in full, country), and affiliation E-mails</span>.
-        Incomplete and repetitive registrations will be removed without any prior notice. Each team is permitted to have
-        <span style="font-weight: 700;">a maximum of six members</span>.<br>
-        <br>2. During the validation and training phase, all participants must <span style="font-weight: 700;">submit a
-          complete solutio</span>
-        <span style="font-weight: 700;">n</span> to this challenge, which includes <span style="font-weight: 700;">a
-          Docker image</span>(in tar file format) and <span style="font-weight: 700;">a qualified methodology
-          paper</span> (of at least 8 pages, in LNCS format).<br>
-        <br>3. <span style="font-weight: 700;">All participants must agree that the short papers they submit can be made
-          publicly available on the challenge website, and that organizers can use information provided by participants,
-          including scores, predicted labels, and papers.</span>
-        <br>
-        <br>4. Participants are <span style="font-weight: 700;">not allowed to register multiple teams or
-          accounts</span>.The CMRxRecon Organizers reserve the right to disqualify such participants.<br>
-        <br>5. <span style="font-weight: 700;">Redistribution or transfer of data or data links is prohibited</span>.
-        Participants must use the data solely for their own purposes.&nbsp;<br>
-        <br>6. Participants should <span style="font-weight: 700;">develop fully automated methods based solely on the
-          training set</span>, and <span style="font-weight: 700;">no manual interventions</span> (such as manual
-        annotation of cases) are allowed.&nbsp;
-      </p>
-    </div>
-  </section> -->
 
 
   <footer class="u-align-center u-clearfix u-footer u-grey-25 u-footer" id="sec-e835">
     <div class="u-clearfix u-sheet u-sheet-1">
       <p class="u-align-left u-text u-text-black u-text-default u-text-1">
         <a class="u-active-none u-border-0 u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-1"
-          href="http://cmr.miccai.cloud/">CMRxMotion&nbsp;<br>
+          href="http://cmr.miccai.cloud/">
+          <span style="text-decoration: underline !important;">CMRxMotion</span>&nbsp;<br>
           <span style="font-size: 1rem;">(</span>
           <span style="font-size: 1rem;">Previous Challenge)</span>
           <br>
@@ -1410,7 +1206,7 @@
             fill="currentColor" p-id="3528"></path>
         </svg></span>
       <a href="mailto:CMRxMotion@163.com"
-        class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-3">CMRxMotion@163.com</a><span
+        class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-90 u-btn-3">CMRxMotion@163.com</a><span
         class="u-icon u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 1024 1024"
           style="">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-48bf"></use>
@@ -1472,7 +1268,7 @@
             fill="currentColor" p-id="6889"></path>
         </svg></span>
       <a href="https://www.synapse.org/#!Synapse:syn28503327/wiki/617822"
-        class="u-active-none u-border-0 u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-7">Synapse
+        class="u-active-none u-border-0 u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-90 u-btn-7">Synapse
         Link</a><span class="u-icon u-icon-7"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice"
           viewBox="0 0 1024 1024" style="">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-f8e3"></use>
@@ -1495,6 +1291,17 @@
       <p class="u-align-center u-text u-text-grey-80 u-text-7">© Copyright 2023 CMRxRecon Working Group</p>
     </div>
   </footer>
+  <section class="u-backlink u-clearfix u-grey-80">
+    <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+      <span>Website Templates</span>
+    </a>
+    <p class="u-text">
+      <span>created with</span>
+    </p>
+    <a class="u-link" href="" target="_blank">
+      <span>Website Builder Software</span>
+    </a>.
+  </section>
 
 </body>
 
