--- a/STACOM.html
+++ b/STACOM.html
@@ -22,7 +22,6 @@
 
 
 
-
   <script type="application/ld+json">
     {
       "@context": "http://schema.org",
@@ -169,7 +168,7 @@
         alt="" data-image-width="768" data-image-height="333">
     </div>
   </header>
- <section class="u-clearfix u-section-1" id="sec-280d">
+  <section class="u-clearfix u-section-1" id="sec-280d">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <img class="u-image u-image-default u-image-1"
         src="images/ChengyanWang_A_doctor_is_scanning_a_patients_heart_using_magnet_d618a9ba-a3ae-4c64-9be0-9b68a6423848.png"
@@ -182,9 +181,13 @@
         alt="" data-image-width="1024" data-image-height="1024">
     </div>
   </section>
-   <!-- <section class="u-clearfix u-section-2" id="sec-6e1a">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      <p class="u-align-center u-text u-text-custom-color-4 u-text-1">
+  <!-- <section class="u-clearfix u-section-2" id="sec-95e9">
+    <div class="u-clearfix u-sheet u-sheet-1">
+      <p class="u-text u-text-default u-text-grey-60 u-text-1"> The challenge is currently sponsored by Simens
+        Healthineers Ltd., China</p>
+      <img class="u-image u-image-contain u-image-default u-image-1" src="images/simens.png" alt=""
+        data-image-width="450" data-image-height="112">
+      <p class="u-align-center u-text u-text-custom-color-4 u-text-2">
         <span style="font-weight: 700;"> Sponsorship is welcome, and all donations will be used to enhance the shared
           computing power !</span>
         <br>(contact: <a href="mailto:CMRxRecon@outlook.com"
@@ -192,26 +195,18 @@
           <span style="text-decoration: underline !important;">CMRxRecon@outlook.com</span>
         </a>).
       </p>
-    </div>
-  </section>
-  <section class="u-clearfix u-section-3" id="sec-95e9">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      <p class="u-text u-text-default u-text-grey-60 u-text-1"> The challenge is currently sponsored by Simens
-        Healthineers Ltd., China</p>
-      <img class="u-image u-image-contain u-image-default u-image-1" src="images/simens.png" alt=""
-        data-image-width="450" data-image-height="112">
-      <p class="u-text u-text-default u-text-grey-60 u-text-2">The following information is provided by the sponsor. No
+      <p class="u-text u-text-default u-text-grey-60 u-text-3">The following information is provided by the sponsor. No
         guarantee is provided by the organizers.</p>
     </div>
   </section>
-  <section class="u-clearfix u-section-4" id="sec-bdc8">
+  <section class="u-clearfix u-section-3" id="sec-bdc8">
     <div class="u-clearfix u-sheet u-sheet-1">
       <img
         class="u-absolute-hcenter u-expanded-height u-image u-image-contain u-image-default u-preserve-proportions u-image-1"
         src="images/20230424_AD-1.png" alt="" data-image-width="2100" data-image-height="6000">
     </div>
   </section> -->
-  <section class="u-clearfix u-section-5" id="sec-fc75">
+  <section class="u-clearfix u-section-4" id="sec-fc75">
     <div class="u-clearfix u-sheet u-sheet-1">
       <h3 class="u-text u-text-grey-80 u-text-1">STACOM workshop paper</h3>
       <p class="u-align-justify u-text u-text-grey-60 u-text-2">Participants are invited to submit an <span
@@ -246,7 +241,7 @@
       </ol>
     </div>
   </section>
-  <!-- <section class="u-clearfix u-section-6" id="sec-0df3">
+  <!-- <section class="u-clearfix u-section-5" id="sec-0df3">
     <div class="u-clearfix u-sheet u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Validation Submission<br>
       </h3>
@@ -272,13 +267,13 @@
       </ul>
       <p class="u-text u-text-default u-text-grey-60 u-text-5">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Note:&nbsp;<br>For this
         Challenge,&nbsp;you and your team are limited to 3 scored submissions per day for every task.&nbsp;<br>The daily
-        submission limit will reset every day at 00:00:00 UTC. <br>When the evaluation is finished, the metrics will be
+        submission limit will reset every day at 00:00:00 PST. <br>When the evaluation is finished, the metrics will be
         return on <a href="https://www.synapse.org/#!Synapse:syn51386469/wiki/"
           class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-1">Synapse</a>.&nbsp;<br>
       </p><span class="u-file-icon u-icon u-icon-1"><img src="images/6897039.png" alt=""></span>
     </div>
-  </section> -->
-  <!-- <section class="u-clearfix u-section-7" id="sec-c704">
+  </section>
+  <section class="u-clearfix u-section-6" id="sec-c704">
     <div class="u-clearfix u-sheet u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Testing Submission<br>
       </h3>
@@ -291,7 +286,6 @@
         methodology paper&nbsp;<br>The submitted Docker image will be evaluated with the following commands. If the
         Docker container does not work or the paper does not include all the necessary information to reproduce the
         method, we will return back the error information and review comments to participants.<br>
-        <br>
       </p>
       <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-4">CPU:</p>
       <img class="u-expanded-width u-image u-image-default u-preserve-proportions u-image-1"
@@ -307,7 +301,8 @@
     <div class="u-clearfix u-sheet u-sheet-1">
       <p class="u-align-left u-text u-text-black u-text-default u-text-1">
         <a class="u-active-none u-border-0 u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-1"
-          href="http://cmr.miccai.cloud/">CMRxMotion&nbsp;<br>
+          href="http://cmr.miccai.cloud/">
+          <span style="text-decoration: underline !important;">CMRxMotion</span>&nbsp;<br>
           <span style="font-size: 1rem;">(</span>
           <span style="font-size: 1rem;">Previous Challenge)</span>
           <br>
@@ -342,7 +337,7 @@
             fill="currentColor" p-id="3528"></path>
         </svg></span>
       <a href="mailto:CMRxMotion@163.com"
-        class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-3">CMRxMotion@163.com</a><span
+        class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-90 u-btn-3">CMRxMotion@163.com</a><span
         class="u-icon u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 1024 1024"
           style="">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-48bf"></use>
@@ -404,7 +399,7 @@
             fill="currentColor" p-id="6889"></path>
         </svg></span>
       <a href="https://www.synapse.org/#!Synapse:syn28503327/wiki/617822"
-        class="u-active-none u-border-0 u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-7">Synapse
+        class="u-active-none u-border-0 u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-90 u-btn-7">Synapse
         Link</a><span class="u-icon u-icon-7"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice"
           viewBox="0 0 1024 1024" style="">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-f8e3"></use>
@@ -427,7 +422,6 @@
       <p class="u-align-center u-text u-text-grey-80 u-text-7">© Copyright 2023 CMRxRecon Working Group</p>
     </div>
   </footer>
-
 
 </body>
 
