--- a/Task2-T1-T2-mapping.html
+++ b/Task2-T1-T2-mapping.html
@@ -170,20 +170,20 @@
   <section class="u-clearfix u-section-1" id="sec-96fc">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Task2: T1/T2 mapping</h3>
-      <img class="u-expanded-width u-image u-image-default u-preserve-proportions u-image-1"
-        src="images/2023-04-273.49.261.png" alt="" data-image-width="2656" data-image-height="1060">
+      <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/mapping.png" alt=""
+        data-image-width="5784" data-image-height="2227">
     </div>
   </section>
   <section class="u-clearfix u-section-2" id="sec-af75">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Background</h3>
-      <p class="u-custom-font u-font-arial u-text u-text-default u-text-grey-60 u-text-2"> Cardiac T1 and T2 mapping
-        have been widely used for the evaluation of intracellular disturbances of the cardiomyocyte. Characterization of
-        the T1 of myocardial tissue can be used to detect and assess various cardiomyopathies, while T2 changes have
-        been reported in edematous regions in patients with infarction, hemorrhage, graft rejection, or myocarditis. For
-        patients with voluntary breath-holds or cardiac arrhythmia, image degradation will occur during the long
-        acquisition window and motions, thus affecting the image quality. Accelerated T1 and T2 mapping have the
-        capability to shorting the acquisition window, thus those artifacts associated with respiratory motion and
+      <p class="u-align-justify u-custom-font u-font-arial u-text u-text-default u-text-grey-60 u-text-2"> Cardiac T1
+        and T2 mapping have been widely used for the evaluation of intracellular disturbances of the cardiomyocyte.
+        Characterization of the T1 of myocardial tissue can be used to detect and assess various cardiomyopathies, while
+        T2 changes have been reported in edematous regions in patients with infarction, hemorrhage, graft rejection, or
+        myocarditis. For patients with voluntary breath-holds or cardiac arrhythmia, image degradation will occur during
+        the long acquisition window and motions, thus affecting the image quality. Accelerated T1 and T2 mapping have
+        the capability to shorting the acquisition window, thus those artifacts associated with respiratory motion and
         arrhythmia can be largely reduced. Conventional T1 and T2 mapping estimation model is prone to fail in face of
         highly under-sampled multi-contrast CMR images due to the reduced original image qualities.<b style=""> This
           challenge aims to establish a platform for multi-contrast CMR reconstruction and provide a benchmark dataset
@@ -954,12 +954,14 @@
     </div>
   </section>
   <section class="u-clearfix u-section-3" id="sec-c73f">
-    <div class="u-clearfix u-sheet u-sheet-1">
+    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Data</h3>
-      <div class="u-align-center u-clearfix u-group-elements u-group-elements-1">
-        <p class="u-align-justify u-custom-font u-font-arial u-text u-text-grey-60 u-text-2">
-          <span style="font-weight: 700;">Scanner:</span> Siemens 3T MRI scanner (MAGNETOM Vida)<br>
-          <br>
+      <p class="u-text u-text-default u-text-2">
+        <span style="font-weight: 700;"> Scanner:</span> Siemens 3T MRI scanner (MAGNETOM Vida)
+      </p>
+      <div class="u-align-center u-clearfix u-expanded-width u-group-elements u-group-elements-1">
+        <p class="u-align-justify u-custom-font u-font-arial u-text u-text-grey-60 u-text-3">
+          <span style="font-weight: 700;"></span>
           <span style="font-weight: 700;">CMR acquisition:</span> We followed the recommendations of CMR imaging
           reported in the previous publication (doi: <a
             href="https://link.springer.com/article/10.1007/s43657-021-00018-x"
@@ -983,7 +985,6 @@
           ms, TE of 1.29 ms, T2 preparation time of 0/35/55 ms, partial Fourier of 6/8, and GRAPPA factor of 2. Signal
           data were collected at the end of the diastole with ECG triggering.&nbsp;
           The T2 value is calculated with the equation：&nbsp;<br>
-          <br>
           <br>
           <br>where
           S(t) represents the signal intensity, A is the scale factor and t denote T2
@@ -2145,7 +2146,8 @@
     <div class="u-clearfix u-sheet u-sheet-1">
       <p class="u-align-left u-text u-text-black u-text-default u-text-1">
         <a class="u-active-none u-border-0 u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-1"
-          href="http://cmr.miccai.cloud/">CMRxMotion&nbsp;<br>
+          href="http://cmr.miccai.cloud/">
+          <span style="text-decoration: underline !important;">CMRxMotion</span>&nbsp;<br>
           <span style="font-size: 1rem;">(</span>
           <span style="font-size: 1rem;">Previous Challenge)</span>
           <br>
@@ -2180,7 +2182,7 @@
             fill="currentColor" p-id="3528"></path>
         </svg></span>
       <a href="mailto:CMRxMotion@163.com"
-        class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-3">CMRxMotion@163.com</a><span
+        class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-90 u-btn-3">CMRxMotion@163.com</a><span
         class="u-icon u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 1024 1024"
           style="">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-48bf"></use>
@@ -2242,7 +2244,7 @@
             fill="currentColor" p-id="6889"></path>
         </svg></span>
       <a href="https://www.synapse.org/#!Synapse:syn28503327/wiki/617822"
-        class="u-active-none u-border-0 u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-7">Synapse
+        class="u-active-none u-border-0 u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-90 u-btn-7">Synapse
         Link</a><span class="u-icon u-icon-7"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice"
           viewBox="0 0 1024 1024" style="">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-f8e3"></use>
@@ -2265,7 +2267,6 @@
       <p class="u-align-center u-text u-text-grey-80 u-text-7">© Copyright 2023 CMRxRecon Working Group</p>
     </div>
   </footer>
-
 
 </body>
 
