--- a/Challenge.html
+++ b/Challenge.html
@@ -24,6 +24,7 @@
 
 
 
+
   <script type="application/ld+json">
     {
       "@context": "http://schema.org",
@@ -184,7 +185,7 @@
     </div>
   </section>
   <section class="u-clearfix u-section-2" id="sec-df93">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+    <div class="u-clearfix u-sheet u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Join the challenge！</h3>
       <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2">1. Sign up your account on the <a
           href="https://www.synapse.org/#!Synapse:syn51386469/wiki/"
@@ -201,35 +202,74 @@
       <p class="u-align-center u-text u-text-3">Email Format</p>
       <img class="u-image u-image-contain u-image-default u-image-1" src="images/2023-05-062.03.45.png" alt=""
         data-image-width="1726" data-image-height="790">
-      <p class="u-align-left u-text u-text-4"> Note: Please use lowercase letters and numbers in your team name. Do not
-        include any spacing or special characters.<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Do not send correspondences
-        to the personal email accounts of the organizers, unless a response has not been received in four business days.
+      <p class="u-align-justify u-text u-text-4"> Note: Please use lowercase letters and numbers in your team name. Do
+        not include any spacing or special characters.<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Correspondence not be
+        directed to the personal email accounts of the organizers, unless a response has not been received in four
+        business days.
       </p><span class="u-file-icon u-icon u-icon-1"><img src="images/6897039.png" alt=""></span>
     </div>
   </section>
   <section class="u-clearfix u-section-3" id="sec-fa8e">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+    <div class="u-clearfix u-sheet u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Download the data</h3>
       <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2">Once we received the <a
           href="files/RegistrationForm.xlsx"
           class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-1">registratoin
           form</a> and the <a href="files/CMRxReconDataAccessAgreement.pdf"
           class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-2">data
-          agreement </a>&nbsp;from your team, you have the access to download the data.<br>[10 May, 2023]&nbsp;Both training
+          agreement </a>&nbsp;from your team, you have the access to download the data.<br>[10 May, 2023]&nbsp;Training
         data and&nbsp;validation data will be released. The results can be evaluated from 30 May, 2023.<br>Please follow
         the instructions on&nbsp;<a href="https://www.synapse.org/#!Synapse:syn51386469/wiki/"
           class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-3">Synapse</a>&nbsp;to
-        download the data.<br>We will send you the link and password to download the data (via Google Drive, Baidu
-        Netdisk, and Aliyun Drive)
+        download the data.<br>We will send you the link and password to download the data (via <a
+          href="https://www.google.com/drive/"
+          class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-4">
+          <span style="text-decoration: underline !important;">Google Drive</span>
+        </a>, <a href="https://pan.baidu.com"
+          class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-5">
+          <span style="text-decoration: underline !important;">Baidu Netdisk</span>
+        </a>, and <a href="https://www.aliyundrive.com"
+          class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-6">
+          <span style="text-decoration: underline !important;">Aliyun Drive</span>
+        </a>)
       </p>
     </div>
   </section>
-  <section class="u-clearfix u-section-4" id="sec-f7d9">
+  <section class="u-clearfix u-section-4" id="sec-e334">
+    <div class="u-clearfix u-sheet u-sheet-1">
+      <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Train the model</h3>
+      <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2"> Participants are expected to train
+        models in their local computational environments and to submit docker containers on <a
+          href="https://www.synapse.org/#!Synapse:syn51386469/wiki/"
+          class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-1">Synapse</a>
+        platform. A leaderboard will be maintained on the <a href="https://www.synapse.org/#!Synapse:syn51386469/wiki/"
+          class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-2">Synapse</a>
+        platform.
+      </p>
+    </div>
+  </section>
+  <section class="u-clearfix u-section-5" id="sec-fa04">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Evaluation Platform</h3>
+      <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2"> The validation of the unseen test set
+        will be performed on a cloud server with a configuration as follows:</p>
+      <ul class="u-align-justify u-custom-font u-font-arial u-text u-text-default u-text-grey-60 u-text-3">
+        <li>CPU: Intel(R) Core(TM) i9-10900K CPU @ 3.70GHz, 20 cores;&nbsp;</li>
+        <li>RAM: 128 GB;
+          GPU: NVIDIA GeForce RTX 3090 (24 GB VRAM, single GPU);&nbsp;</li>
+        <li>GPU DRIVER: NVIDIA-DRIVER Version 515.48.07;&nbsp;</li>
+        <li>GPU CUDA: Version 11.7;</li>
+        <li>Validation Cases: 50 cases;</li>
+        <li>Time Limitation: 4 hours / team for each task&nbsp;</li>
+      </ul>
+    </div>
+  </section>
+  <section class="u-clearfix u-section-6" id="sec-f7d9">
+    <div class="u-clearfix u-sheet u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Publication references</h3>
-      <p class="u-text u-text-default u-text-grey-60 u-text-2">You are free to use and/or refer to the CMRxRecon
-        challenge and datasets in your own research after the embargo period (Dec 2023), provided that you cite the
-        following manuscripts:&nbsp;<br>
+      <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2">You are free to use and/or refer to the
+        CMRxRecon challenge and datasets in your own research after the embargo period (Dec 2023), provided that you
+        cite the following manuscripts:&nbsp;<br>
         <span style="font-weight: 700;">Reference
           of the imaging acquisition protocol:&nbsp; </span>
         <br>1. Wang
@@ -352,23 +392,7 @@
       </p>
     </div>
   </section>
-  <section class="u-clearfix u-section-5" id="sec-fa04">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Evaluation Platform</h3>
-      <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2"> The validation of the unseen test set
-        will be performed on a cloud server with a configuration as follows:</p>
-      <ul class="u-align-justify u-custom-font u-font-arial u-text u-text-default u-text-grey-60 u-text-3">
-        <li>CPU: Intel(R) Core(TM) i9-10900K CPU @ 3.70GHz, 20 cores;&nbsp;</li>
-        <li>RAM: 128 GB;
-          GPU: NVIDIA GeForce RTX 3090 (24 GB VRAM, single GPU);&nbsp;</li>
-        <li>GPU DRIVER: NVIDIA-DRIVER Version 515.48.07;&nbsp;</li>
-        <li>GPU CUDA: Version 11.7;</li>
-        <li>Validation Cases: 50 cases;</li>
-        <li>Time Limitation: 4 hours / team for each task&nbsp;</li>
-      </ul>
-    </div>
-  </section>
-  <section class="u-clearfix u-section-6" id="sec-744a">
+  <section class="u-clearfix u-section-7" id="sec-744a">
     <div class="u-clearfix u-sheet u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Awards</h3>
       <p class="u-text u-text-grey-60 u-text-2"> We will provide monetary awards for <b>
@@ -525,7 +549,7 @@
               src="images/3502463.png" alt=""></span>
         </div>
       </div><span class="u-file-icon u-icon u-icon-18"><img src="images/3502463.png" alt=""></span>
-      <ul class="u-custom-font u-font-arial u-text u-text-grey-60 u-text-5">
+      <ul class="u-align-justify u-custom-font u-font-arial u-text u-text-grey-60 u-text-5">
         <li>Certificate: A certificate from CMRxRecon MICCAI 2023 will be rewarded by Siemens.</li>
         <li>Oral presentation: ​
           The top 3 winners in each task will be invited to give an oral presentation during MICCAI STACOM workshop
@@ -536,14 +560,19 @@
       </ul>
     </div>
   </section>
-  <section class="u-clearfix u-section-7" id="sec-4d62">
+  <section class="u-clearfix u-section-8" id="sec-47ab">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Principal of participation</h3>
       <img class="u-expanded-width u-image u-image-contain u-image-default u-preserve-proportions u-image-1"
-        src="images/2023-05-061.20.14.png" alt="" data-image-width="2298" data-image-height="1068">
+        src="images/2023-05-065.28.32.png" alt="" data-image-width="2292" data-image-height="1110">
+      <p class="u-align-justify u-text u-text-grey-60 u-text-2">
+        <span style="font-weight: 700;"></span>
+        <span style="font-weight: 700;"></span>Note: Participants are not required to upload the complete training code.
+        But teams willing to upload the original training code will be automatically entered into the code sharing pool.
+      </p><span class="u-file-icon u-icon u-icon-1"><img src="images/6897039.png" alt=""></span>
     </div>
   </section>
-  <!-- <section class="u-align-center u-clearfix u-section-8" id="sec-91fe">
+  <!-- <section class="u-align-center u-clearfix u-section-9" id="sec-91fe">
     <div class="u-clearfix u-sheet u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">FAQ</h3>
       <div class="u-accordion u-expanded-width u-faq u-spacing-20 u-accordion-1">
@@ -724,7 +753,7 @@
         </div>
       </div>
       <h3 class="u-align-left u-text u-text-default u-text-grey-80 u-text-10">Rules</h3>
-      <p class="u-align-left u-text u-text-grey-60 u-text-11"> 1. All individuals who wish to participate in this
+      <p class="u-align-justify u-text u-text-grey-60 u-text-11"> 1. All individuals who wish to participate in this
         challenge are required to register using their<span style="font-weight: 700;"> real name, affiliation details
           (including department, university /institute/company name in full, country), and affiliation E-mails</span>.
         Incomplete and repetitive registrations will be removed without any prior notice. Each team is permitted to have
@@ -754,7 +783,8 @@
     <div class="u-clearfix u-sheet u-sheet-1">
       <p class="u-align-left u-text u-text-black u-text-default u-text-1">
         <a class="u-active-none u-border-0 u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-1"
-          href="http://cmr.miccai.cloud/">CMRxMotion&nbsp;<br>
+          href="http://cmr.miccai.cloud/">
+          <span style="text-decoration: underline !important;">CMRxMotion</span>&nbsp;<br>
           <span style="font-size: 1rem;">(</span>
           <span style="font-size: 1rem;">Previous Challenge)</span>
           <br>
@@ -789,7 +819,7 @@
             fill="currentColor" p-id="3528"></path>
         </svg></span>
       <a href="mailto:CMRxMotion@163.com"
-        class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-3">CMRxMotion@163.com</a><span
+        class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-90 u-btn-3">CMRxMotion@163.com</a><span
         class="u-icon u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 1024 1024"
           style="">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-48bf"></use>
@@ -851,7 +881,7 @@
             fill="currentColor" p-id="6889"></path>
         </svg></span>
       <a href="https://www.synapse.org/#!Synapse:syn28503327/wiki/617822"
-        class="u-active-none u-border-0 u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-7">Synapse
+        class="u-active-none u-border-0 u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-90 u-btn-7">Synapse
         Link</a><span class="u-icon u-icon-7"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice"
           viewBox="0 0 1024 1024" style="">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-f8e3"></use>
@@ -874,7 +904,6 @@
       <p class="u-align-center u-text u-text-grey-80 u-text-7">© Copyright 2023 CMRxRecon Working Group</p>
     </div>
   </footer>
-
 
 </body>
 
