--- a/FAQ.html
+++ b/FAQ.html
@@ -768,7 +768,7 @@
           including scores, predicted labels, and papers.</span>
         <br>
         <br>4. Participants are <span style="font-weight: 700;">not allowed to register multiple teams or
-          accounts</span>.The CMRxRecon Organizers reserve the right to disqualify such participants.<br>
+          accounts</span>.The CMRxRecon organizers reserve the right to disqualify such participants.<br>
         <br>5. <span style="font-weight: 700;">Redistribution or transfer of data or data links is prohibited</span>.
         Participants must use the data solely for their own purposes.&nbsp;<br>
         <br>6. Participants should <span style="font-weight: 700;">develop fully automated methods based solely on the
